# disintegrate-car-rental-demo

./: Cargo.toml  Insomnia.json  README
src/: application.rs  domain.rs  main.rs  read_model.rs
