[package]
name = "banking"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
disintegrate = { version = "0.7.2", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "0.7.2", features = ["listener"]}
tokio = { version = "1.13.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
async-trait = "0.1.68"
